fix messages bar sizing on text wrap

--- a/src/journals/messages/index.css
+++ b/src/journals/messages/index.css
@@ -9,7 +9,7 @@ body {
     padding: 0px;
 }
 
-#page {
+body {
     width: 100%;
     height: 100%;
     display: flex;
